# gauchito

./: .gitignore  Cargo.toml  LICENSE  justfile  main.rs
gauchito-cli/: Cargo.toml
gauchito-cli/src/: app.rs  main.rs
gauchito-core/: Cargo.toml
gauchito-core/src/: anchor.rs  changeset.rs  context.rs  document.rs  editorconfig.rs  edits.rs  fileio.rs  grapheme.rs  history.rs  ids.rs  io.rs  lib.rs  movement.rs  mutation.rs  operations.rs  options.rs  registry.rs  selection.rs
gauchito-core/src/buffer/: buffer.rs  edit.rs  grapheme.rs  history.rs  mod.rs  selection.rs
gauchito-core/src/buffer/text_objects/: kinds.rs  mod.rs  plain.rs  regex.rs  tree-sitter.rs
gauchito-core/src/edit/: mod.rs  ot.rs  ot_tests.rs
gauchito-core/src/history/: mod.rs  node.rs  tree.rs
gauchito-ot/: Cargo.toml
gauchito-ot/src/: lib.rs
gauchito-paths/: Cargo.toml
gauchito-paths/src/: lib.rs
gauchito-script/: Cargo.toml
gauchito-script/lua/: prelude.lua
gauchito-script/lua/presets/: micro.lua  vim.lua
gauchito-script/src/: ctx.rs  kernels.rs  lib.rs  userdata.rs
