[workspace]
members = ["gauchito-core"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Marco Martinelli <smartinellimarco@icloud.com>"]
license = "MIT"
repository = "https://github.com/smartinellimarco/gauchito"
homepage = "https://github.com/smartinellimarco/gauchito"
