[workspace]
resolver = "3"
members = [
  "gauchito-core",
  "gauchito-paths",
  "gauchito-ui",
  "gauchito-script",
  "gauchito-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
ropey = "1.6.1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
